--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,2 +1,9 @@
 pandas = 2.2.1
+
+#para leer el csv desde el archivo yaml
 yaml = 0.2.5
+pyyaml = 6.0.1
+
+#para la generación de gráficos
+plotly-express = 0.4.1 
+nbformat = 5.10.4
