--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,3 +8,6 @@ pyyaml = 6.0.1
 plotly-express = 0.4.1 
 nbformat = 5.10.4
 seaborn = 0.12.2
+
+#para la predicción logarítmica
+scikit-learn = 1.4.2
